--- a/Task1/Index.html
+++ b/Task1/Index.html
@@ -25,17 +25,31 @@
             </ul> 
         </education>
         
+        <special>
+            <h2>Skills</h2>
+            <ul>
+                <li>Fus Ro Dah</li>
+                <li>Kindle bonfire</li>
+                <li>Destroy HALO ring</li>
+                <li>Thunder cross split attack</li>
+            </ul>
+        </special>
+        
         <employment>
             <h2>Job experince</h2>
-            <dl>
-                <dt><h3> Kame Yu department stores</h3></dt>
-                <dd>E dolor expetendis fidelissimae. Culpa cohaerescant expetendis sint possumus, de 
-                    quis deserunt cernantur. Amet deserunt ea firmissimum ad ab quem admodum 
-                    despicationes. Probant iis dolore, vidisse ea cillum officia. Aut quo 
-                    concursionibus, ipsum mandaremus et minim sint qui quae litteris ut senserit, te 
-                    cillum quid multos eiusmod. Non quae qui enim in illum aliquip reprehenderit. 
-                    Doctrina quorum cernantur aliquip.</dd>
-            </dl>
+            <ul>
+                <li>
+                    <dl>
+                        <dt><h3> Kame Yu department stores</h3></dt>
+                        <dd>E dolor expetendis fidelissimae. Culpa cohaerescant expetendis sint possumus, de 
+                            quis deserunt cernantur. Amet deserunt ea firmissimum ad ab quem admodum 
+                            despicationes. Probant iis dolore, vidisse ea cillum officia. Aut quo 
+                            concursionibus, ipsum mandaremus et minim sint qui quae litteris ut senserit, te 
+                            cillum quid multos eiusmod. Non quae qui enim in illum aliquip reprehenderit. 
+                            Doctrina quorum cernantur aliquip.</dd>
+                    </dl>
+                </li>
+            </ul>
         </employment>
     </body>
 </html>
