--- a/Task2(SignUpForm)/Index.html
+++ b/Task2(SignUpForm)/Index.html
@@ -14,8 +14,13 @@
                                        transform: translate(-50%, 0%)">
                 <table>
                     <tr>
-                        <td>Name</td>
-                        <td><input type="text" name="name"/></td>
+                        <td>First Name</td>
+                        <td><input type="text" name="fname"/></td>
+                    </tr>
+                    
+                    <tr>
+                        <td>Last Name</td>
+                        <td><input type="text" name="lname"/></td>
                     </tr>
                     
                     <tr>
